--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -328,7 +328,7 @@
 
     <!------------------------------------------------ Sección Acerca de nosotros -------------------------------------------------------->
 
-    <section class="page-section d-flex flex-column text-center mt-5 container" id="about">
+    <section class="page-section d-flex flex-column text-center mt-7 container" id="about">
         <h1 class="mb-5 text-uppercase">Nuestro Equipo</h1>
         <div class="row">
             <div class="col">
@@ -523,7 +523,7 @@
     <!-- Custom scripts for this template -->
     <script src="../js/agency.min.js"></script>
     <script src="../jquery-easing/jquery.easing.min.js"></script>
-
+ <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
