--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -352,7 +352,7 @@
                 <p class="text-muted">Desarrollador App</p>
             </div>
             <div class="col">
-                <img src="../images/imagen_equipo2.jpg" width="120" alt="" class="redonda">
+                <img src="../images/miniXus.PNG" width="120" alt="" class="redonda">
                 <h5 class="mt-3">Josep</h5>
                 <p class="text-muted">Desarrollador Back End</p>
             </div>
