--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -274,7 +274,8 @@
                     <h5>¡Gracias a nuestra aplicación android puedes tener acceso a toda la información que
                         necesitas
                         en tu teléfono móvil!</h5>
-                    <img src="../images/google-play-badge.png" width="200" class="my-4">
+                    <a href="https://play.google.com/store" target="_blank">
+                    <img src="../images/google-play-badge.png" width="200" class="my-4"></a>
                 </div>
             </div>
         </div>
