Solucionado problema que impedía ver la leyenda

--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -169,7 +169,7 @@
                 heatmap.setMap(getMap());
         });
     }
-        recibirMedidasFecha({"desde":0, "hasta": 1574386240247});
+        recibirMedidasFecha({"desde":0, "hasta": 1575153925338});
 
     </script>
 
@@ -254,9 +254,14 @@
 
     <section class="page-section container-fluid" id="mapa">
         <div class="map" id="map">
-        <div class="leyenda_mapa" id="leyenda_mapa"></div>
-     
-            </div>
+        </div>
+        <div class="container leyenda_mapa" id="leyenda_mapa">
+            <ul>
+                <li>RED</li>
+                <li>YELLOW</li>
+                <li>GREEN</li>
+            </ul>
+        </div>
     </section>
 
     <!------------------------------------------------ / Sección Mapa -------------------------------------------------------->
