Agregado estructura de la leyenda
En la izquierda se ven los colores de la contaminación
En la derecha se ven los iconos que representa cada gas

--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -256,11 +256,22 @@
         <div class="map" id="map">
         </div>
         <div class="container leyenda_mapa" id="leyenda_mapa">
-            <ul>
-                <li>RED</li>
-                <li>YELLOW</li>
-                <li>GREEN</li>
-            </ul>
+            <div class="row">
+                <div class="col grandient_bar">
+                    <ul>
+                        <li>RED</li>
+                        <li>YELLOW</li>
+                        <li>GREEN</li>
+                    </ul>
+                </div>
+                <div class="col gasItems">
+                    <ul>
+                        <li>SO2</li>
+                        <li>NOX</li>
+                        <li>Irritantes</li>
+                    </ul> 
+                </div> 
+            </div>  
         </div>
     </section>
 
