responsive de la leyenda

--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -255,16 +255,16 @@
     <section class="page-section container-fluid" id="mapa">
         <div class="map" id="map">
         </div>
-        <div class="container leyenda_mapa" id="leyenda_mapa">
+        <div class="container-fluid" id="leyenda_mapa">
             <div class="row">
-                <div class="col grandient_bar">
+                <div class="col grandient_bar" style="background-color: red">
                     <ul>
-                        <li>RED</li>
-                        <li>YELLOW</li>
-                        <li>GREEN</li>
+                        <li>SO2</li>
+                        <li>NOX</li>
+                        <li>Irritantes</li>
                     </ul>
                 </div>
-                <div class="col gasItems">
+                <div class="col gasItems" style="background-color: yellow">
                     <ul>
                         <li>SO2</li>
                         <li>NOX</li>
