Agregada proporción responsive a la leyenda auto-3

--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -256,15 +256,15 @@
         <div class="map" id="map">
         </div>
         <div class="container-fluid leyenda_mapa" id="leyenda_mapa">
-            <div class="row">
-                <div class="col" style="background-color: aqua">
+            <div class="row justify-content-md-center">
+                <div class="col-md-auto" style="background-color: aqua">
                     <ul>
                         <li>RED</li>
                         <li>YELLOW</li>
                         <li>GREEN</li>
                     </ul>
                 </div>
-                <div class="col" style="background-color: aquamarine">
+                <div class="col-md-3" style="background-color: aquamarine">
                     <ul>
                         <li>SO2</li>
                         <li>NOX</li>
