Añadido gradiante con los 3 colores

--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -257,14 +257,14 @@
         </div>
         <div class="container-fluid leyenda_mapa" id="leyenda_mapa">
             <div class="row justify-content-md-center">
-                <div class="col-md-auto" style="background-color: aqua">
-                    <ul>
-                        <li>RED</li>
-                        <li>YELLOW</li>
-                        <li>GREEN</li>
-                    </ul>
+                <div class="col-md-auto gradient" style="background-color: aqua">
+                  <ul>
+                      <li>Peligro</li>
+                      <li>Moderado</li>
+                      <li>Seguro</li>
+                  </ul>
                 </div>
-                <div class="col-md-3" style="background-color: aquamarine">
+                <div class="col-md-6" style="background-color: aquamarine">
                     <ul>
                         <li>SO2</li>
                         <li>NOX</li>
