No se muestra la informacion al clicar
es posible que sea un conflicto con los usuarios Admin o algo por el estilo

--- a/Servidor/ux/html/admin.html
+++ b/Servidor/ux/html/admin.html
@@ -320,7 +320,7 @@
             console.log(usuario);
 
             // Relleno de informacion en la tarjeta INFORMACION -----------------------------------------
-            /*divContenedor.onclick = function() {
+            divContenedor.onclick = function() {
 
                 var divTextoSensor = document.getElementById("TextoSensor");
                 divTextoSensor.innerHTML = "";
@@ -328,15 +328,15 @@
 
                 var divIdSensor = document.getElementById("IdSensor");
                 divIdSensor.innerHTML = "";
-                divIdSensor.appendChild(document.createTextNode(parseInt(sensor.IdSensor)));
+                divIdSensor.appendChild(document.createTextNode(parseInt(usuario.IdSensor)));
 
                 var divTipoSensor = document.getElementById("TipoSensor");
                 divTipoSensor.innerHTML = "";
-                divTipoSensor.appendChild(document.createTextNode(sensor.TipoSensor));
+                divTipoSensor.appendChild(document.createTextNode(usuario.Sensor.IdSensor));
 
                 var divEstado = document.getElementById("Estado");
                 divEstado.innerHTML = "";
-                divEstado.appendChild(document.createTextNode(sensor.Estado));
+                divEstado.appendChild(document.createTextNode(sensor.Sensor.Estado));
 
                 var divTextoUsuario = document.getElementById("TextoUsuario");
                 divTextoUsuario.innerHTML = "";
@@ -344,25 +344,25 @@
 
                 var divTipoUsuario = document.getElementById("TipoUsuario");
                 divTipoUsuario.innerHTML = "";
-                divTipoUsuario.appendChild(document.createTextNode(sensor.Usuario.TipoUsuario));
+                divTipoUsuario.appendChild(document.createTextNode(usuario.TipoUsuario));
 
                 var divIdUsuario = document.getElementById("IdUsuario");
                 divIdUsuario.innerHTML = "";
-                divIdUsuario.appendChild(document.createTextNode(sensor.Usuario.IdUsuario));
+                divIdUsuario.appendChild(document.createTextNode(usuario.IdUsuario));
 
                 var divNombre = document.getElementById("Nombre");
                 divNombre.innerHTML = "";
-                divNombre.appendChild(document.createTextNode(sensor.Usuario.Nombre));
+                divNombre.appendChild(document.createTextNode(usuario.Nombre));
 
                 var divCorreo = document.getElementById("Correo");
                 divCorreo.innerHTML = "";
-                divCorreo.appendChild(document.createTextNode(sensor.Usuario.Email));
+                divCorreo.appendChild(document.createTextNode(usuario.Email));
 
                 var divTelefono = document.getElementById("Telefono");
                 divTelefono.innerHTML = "";
-                divTelefono.appendChild(document.createTextNode(parseInt(sensor.Usuario.Telefono)));
+                divTelefono.appendChild(document.createTextNode(parseInt(usuario.Telefono)));
 
-            };*/
+            };
 
         }
 
