anyadir filtro buscador

--- a/Servidor/ux/html/admin.html
+++ b/Servidor/ux/html/admin.html
@@ -6,6 +6,7 @@
 <head>
     <script type="text/javascript" src="../js/PROXY.js"></script>
 
+    <script type="text/javascript" src="../js/barra-busqueda.js"></script>
     <!-- Scripts para API Google Maps -->
     <script src="../js/logicaAdministracion.js"></script>
 
@@ -1083,7 +1084,7 @@
 
                                     <div class="contenedorSearch col-7 my-auto">
 
-                                        <input class="cajaDeTexto form-control form-control-sm ml-3 w-75 text-light" type="text" placeholder="Buscar palabras clave..." aria-label="Search">
+                                        <input class="cajaDeTexto form-control form-control-sm ml-3 w-75 text-light" type="text" placeholder="Buscar palabras clave..." aria-label="Search" onkeyup="barraBusqueda()">
 
                                     </div>
 
