Comprobado en index que funciona get todas las medidas desde 0, hasta 0

--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -169,7 +169,7 @@
                     heatmap.setMap(getMap());
                 });
             }
-            recibirMedidasFecha({"desde":0, "hasta": 1575153925338});
+            recibirMedidasFecha({"desde":0, "hasta": 0});
 
         </script>
 
